# pypi-downloader

./: README.md  main.py  pyproject.toml
pypi_downloader/: __init__.py  cli.py  downloader.py
