[tool.poetry]
name = "pypi-downloader"
version = "0.1.0"
description = "A tool to download wheel files from PyPI for specified Python versions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
# Disable packaging mode: Poetry will only manage dependencies, not install the project
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
# Command-line entry point (requires defining a main() in main.py)
pypi-downloader = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
